# woman_and_code

./: .flake8  .pre-commit-config.yaml  pyproject.toml  requirements.txt
data/imdb/: imdb_metadata.json
notebooks/: 01_verify_files.ipynb  02_prepare_data.ipynb  03_collaborative_filtering.ipynb
scripts/: extract_netflix_data.py  make_rating_counts.py  map_IDs.py  sandbox.ipynb  train_model.py
src/waac/: __init__.py  config.py  modeling.py  preprocess.py
